@@ -107,7 +107,7 @@ monospacedwords=
 \\\(TM\)=(TM)
 
 # -- Spaced and unspaced em dashes (entity reference &mdash;).
-# Spaces on both sides are translated to thin space characters.
+# Space on both sides is translated to thin space characters.
 (\n-- )|( -- )|( --\n)=&#8201;&#8212;&#8201;
 (\w)--(\w)=\1&#8212;\2
 \\--(?!-)=--
